Adds swagger for rooms endpoints
