# handlers/requests.go
@@ -36,33 +36,3 @@ type ListMessages struct {
 	RoomID         string `path:"roomID" validate:"required"`
 	ModifiedBefore string `query:"modifiedBefore" default:"0001-01-01 00:00:00" validate:"datetime=2006-01-02 15:04:05"`
 }
-
-type CreateRoom struct {
-	UserRequest
-	RoomID  string   `json:"roomID"`
-	Name    string   `json:"name"`
-	Members []string `json:"members" validate:"required,gt=0"`
-}
-
-type UpdateRoom struct {
-	UserRequest
-	ID   string `path:"id" validate:"required"`
-	Name string `json:"name"`
-}
-
-type GetRoom struct {
-	UserRequest
-	ID string `path:"id" validate:"required"`
-}
-
-type DeleteRoom struct {
-	UserRequest
-	ID string `path:"id" validate:"required"`
-}
-
-type ListRooms struct {
-	UserRequest
-	Page    int    `query:"page"`
-	Size    int    `query:"size" default:"20"`
-	Include string `query:"include"`
-}
